---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TCH004_12.py:6:33: TCH004 [*] Move import `collections.abc.Callable` out of type-checking block. Import is used for more than type hinting.
  |
5 | if TYPE_CHECKING:
6 |     from collections.abc import Callable
  |                                 ^^^^^^^^ TCH004
7 | 
8 | AnyCallable: TypeAlias = Callable[..., Any]
  |
  = help: Move out of type-checking block

ℹ Suggested fix
1 1 | from __future__ import annotations
2 2 | 
3 3 | from typing import Any, TYPE_CHECKING, TypeAlias
  4 |+from collections.abc import Callable
4 5 | 
5 6 | if TYPE_CHECKING:
6   |-    from collections.abc import Callable
  7 |+    pass
7 8 | 
8 9 | AnyCallable: TypeAlias = Callable[..., Any]


